myK8S/forgejo/forgejo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-ingress
  namespace: personal
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-cf"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "git.${BASE_DOMAIN}"
      secretName: forgejo-tls-secret
  rules:
    - host: "git.${BASE_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo-http
                port:
                  number: 3000
